syntax = "proto3";

package proto;

option go_package = "data";

// Heartbeat represents the heartbeat message that is sent between peers
message Heartbeat {
    bytes   Payload         = 1 ;
    bytes   Pubkey          = 2 ;
    bytes   Signature       = 3 ;
    uint32  ShardID         = 4 ;
    string  VersionNumber   = 5 ;
    string  NodeDisplayName = 6 ;
    string  Identity        = 7 ;
    bytes   Pid             = 8 ;
    uint64  Nonce           = 9 ;
    uint32  PeerSubType     = 10;
}

// HeartbeatDTO is the struct used for handling DB operations for heartbeatMessageInfo struct
message HeartbeatDTO {
    int64   MaxDurationPeerUnresponsive  = 1 ;
    int64   MaxInactiveTime              = 2 ;
    int64   TotalUpTime                  = 3 ;
    int64   TotalDownTime                = 4 ;
    int64   TimeStamp                    = 5 ;
    bool    IsActive                     = 6 ;
    uint32  ReceivedShardID              = 7 ;
    uint32  ComputedShardID              = 8 ;
    string  VersionNumber                = 9 ;
    string  NodeDisplayName              = 10;
    string  PeerType                     = 11;
    string  Identity                     = 12;
    bool    IsValidator                  = 13;
    int64   LastUptimeDowntime           = 14;
    int64   GenesisTime                  = 15;
    uint64  Nonce                        = 16;
    uint64  NumInstances                 = 17;
    uint32  PeerSubType                  = 18;
    string  PidString                    = 19;
}

message DbTimeStamp {
    int64   Timestamp = 1;
}
